chore(SG-46): updates

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # General config
-APP_PREFIX=sg-api
-HTTP_PORT=3300
+APP_PREFIX=translate-api
+HTTP_PORT=3302
 STAGE=dev
 REGION=eu-central-1
 URI_PATH_PREFIX=
@@ -14,7 +14,7 @@ LOG_WRITER=ConsoleLogWriter
 
 # Database config
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5435
 DB_DATABASE=default
 DB_USERNAME=user
 DB_PASSWORD=user
