feat(SG-217): authentication & authorization

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,13 @@ DB_PASSWORD=user
 DB_SCHEMA=public
 DB_MIGRATION_TABLE_SCHEMA=public
 DB_MIGRATION_TABLE_NAME=sequelize_meta
+
+# EventBus
+EVENTBUS_PROVIDER=TestEventbusProvider
+EVENTBUS_NAME=sg-eventbus-dev
+
+# Auth
+AUTHENTICATION_ENABLED=false
+AUTHORIZATION_ENABLED=false
+OAUTH_USER_URL=https://dev.auth.starlionrc.com/api/v1/oauth/user
+POLICY_SERVICE_URL=https://dev.api.starlionrc.com/policies-api
