fix(SG-230): internal authentication

--- a/.env.example
+++ b/.env.example
@@ -29,5 +29,8 @@ EVENTBUS_NAME=sg-eventbus-dev
 # Auth
 AUTHENTICATION_ENABLED=false
 AUTHORIZATION_ENABLED=false
+INTERNAL_AUTHENTICATION_ENABLED=true
+INTERNAL_REQUESTS_ALLOWED=true
+INTERNAL_AUTHENTICATION_JWT_SECRET=123456
 OAUTH_USER_URL=https://dev.auth.starlionrc.com/api/v1/oauth/user
 POLICY_SERVICE_URL=https://dev.api.starlionrc.com/policies-api
