--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,5 @@ INTERNAL_REQUESTS_ALLOWED=true
 INTERNAL_AUTHENTICATION_JWT_SECRET=123456
 OAUTH_USER_URL=https://dev.auth.starlionrc.com/api/v1/oauth/user
 POLICY_SERVICE_URL=https://dev.api.starlionrc.com/policies-api
+
+API_DOCS_HOST_LIST=https://api.sandbox-1.dev.auth.allezhealth.com/translate-api,https://api.allezhealth.com/translate-api
