feat(SG-572): Fix tsoa config across all the microservices in order to generate correct swagger json file

--- a/.env.example
+++ b/.env.example
@@ -35,4 +35,4 @@ INTERNAL_AUTHENTICATION_JWT_SECRET=123456
 OAUTH_USER_URL=https://dev.auth.starlionrc.com/api/v1/oauth/user
 POLICY_SERVICE_URL=https://dev.api.starlionrc.com/policies-api
 
-API_DOCS_HOST_LIST=https://api.sandbox-1.dev.auth.allezhealth.com/translate-api,https://api.allezhealth.com/translate-api
+API_DOCS_HOST_LIST=https://api.test.com/translate-api
