--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -106,72 +106,85 @@ jobs:
             sed -i 's/^DB_MIGRATION_TABLE_SCHEMA=.*/DB_MIGRATION_TABLE_SCHEMA=${{ secrets.DB_SCHEMA }}/' .env
 
             echo "✅ .env file updated successfully."
-          
-            echo "🚀 Starting temporary API server for new migration..."
-            HTTP_PORT=3000 nohup npm run dev > server.log 2>&1 &
-            echo "📌 Server started (via npm run dev)"
-          
-            tail -f server.log &
-            TAIL_PID=$!
-          
-            TIMEOUT_PID=""
-            (
-              sleep 300
-              echo "⏰ Timeout reached: killing server (PID $SERVER_PID)"
-              pkill -f "nodemon"
-              pkill -f "ts-node src/cli.ts web"
-              kill $TAIL_PID 2>/dev/null
-            ) &
-            TIMEOUT_PID=$!
+               
+            echo "⚙️ Running DB migrations using Sequelize..."
   
-  
-            echo "🧠 Memory usage before migration:"
-            free -m
-          
-            echo "📋 Top memory consumers:"
-            ps aux --sort=-%mem | head -n 5
+            npx sequelize db:migrate 2>&1 | tee migration.log
             
-            for i in {1..30}; do
-              if curl -s http://localhost:3000/v1/ping/alive >/dev/null; then
-                echo "✅ Server is up"
-                break
-              fi
-              echo "⏳ Waiting for server to start..."
-              sleep 1
-            done
-  
-  
-            echo "⚙️ Running DB migrations..."
-            curl --max-time 30 -X POST http://localhost:3000/v1/system/migrate || {
-              echo "❌ Migration failed!" >&2
+            MIGRATION_EXIT_CODE=${PIPESTATUS[0]}
             
-              echo "📄 Server logs before failure:"
-              tail -n 50 server.log
+            if [ "$MIGRATION_EXIT_CODE" -ne 0 ]; then
+            echo "❌ Migration failed! See migration.log for details." >&2
+            exit $MIGRATION_EXIT_CODE
+            fi
             
-              echo "🧠 Memory snapshot on failure:"
-              free -m
-            
-              echo "📋 Top memory consumers:"
-              ps aux --sort=-%mem | head -n 5
-            
-              pkill -f "nodemon"
-              pkill -f "ts-node src/cli.ts web"
-              kill $TAIL_PID 2>/dev/null
-              kill $TIMEOUT_PID 2>/dev/null
-              exit 1
-            }
-            
-            echo "✅ Migration finished. Cleaning up temporary server..."
-            pkill -f "nodemon"
-            pkill -f "ts-node src/cli.ts web"
-            kill $TAIL_PID 2>/dev/null
-            kill $TIMEOUT_PID 2>/dev/null && echo "🛑 Timeout task cancelled."
-          
-            echo "🧠 Memory after cleanup:"
-            free -m
-            
-            echo "📋 Top memory consumers (post):"
-            ps aux --sort=-%mem | head -n 5
+            echo "✅ Sequelize migration completed."
+
+#            echo "🚀 Starting temporary API server for new migration..."
+#            HTTP_PORT=3000 nohup npm run dev > server.log 2>&1 &
+#            echo "📌 Server started (via npm run dev)"
+#
+#            tail -f server.log &
+#            TAIL_PID=$!
+#
+#            TIMEOUT_PID=""
+#            (
+#              sleep 300
+#              echo "⏰ Timeout reached: killing server (PID $SERVER_PID)"
+#              pkill -f "nodemon"
+#              pkill -f "ts-node src/cli.ts web"
+#              kill $TAIL_PID 2>/dev/null
+#            ) &
+#            TIMEOUT_PID=$!
+#
+#
+#            echo "🧠 Memory usage before migration:"
+#            free -m
+#
+#            echo "📋 Top memory consumers:"
+#            ps aux --sort=-%mem | head -n 5
+#
+#            for i in {1..30}; do
+#              if curl -s http://localhost:3000/v1/ping/alive >/dev/null; then
+#                echo "✅ Server is up"
+#                break
+#              fi
+#              echo "⏳ Waiting for server to start..."
+#              sleep 1
+#            done
+#
+#
+#            echo "⚙️ Running DB migrations..."
+#            curl --max-time 30 -X POST http://localhost:3000/v1/system/migrate || {
+#              echo "❌ Migration failed!" >&2
+#
+#              echo "📄 Server logs before failure:"
+#              tail -n 50 server.log
+#
+#              echo "🧠 Memory snapshot on failure:"
+#              free -m
+#
+#              echo "📋 Top memory consumers:"
+#              ps aux --sort=-%mem | head -n 5
+#
+#              pkill -f "nodemon"
+#              pkill -f "ts-node src/cli.ts web"
+#              kill $TAIL_PID 2>/dev/null
+#              kill $TIMEOUT_PID 2>/dev/null
+#              exit 1
+#            }
+#
+#            echo "✅ Migration finished. Cleaning up temporary server..."
+#            pkill -f "nodemon"
+#            pkill -f "ts-node src/cli.ts web"
+#            kill $TAIL_PID 2>/dev/null
+#            kill $TIMEOUT_PID 2>/dev/null && echo "🛑 Timeout task cancelled."
+#
+#            echo "🧠 Memory after cleanup:"
+#            free -m
+#
+#            echo "📋 Top memory consumers (post):"
+#            ps aux --sort=-%mem | head -n 5
             
             echo "🛠 Building the API..."
             npm run build
