feat(SG-575): Finalization of translation api logic

--- a/.github/workflows/pr-opened.yml
+++ b/.github/workflows/pr-opened.yml
@@ -10,8 +10,21 @@ permissions:
   pull-requests: read
 
 jobs:
-  # 1. run unit test
+  # 1. lint commit messages
+  #  lint-commit:
+  #    name: Commit lint
+  #    uses: ./.github/workflows/commitlint.yml
+  #    if: success()
+
+  # 2. prettier check
+  prettier-check:
+    name: Prettier check
+    uses: ./.github/workflows/prettier.yml
+    if: success()
+
+  # 3. run unit test
   unit-tests:
+    needs: [ prettier-check ]
     name: Unit tests
     uses: ./.github/workflows/unit-tests.yml
     secrets:
@@ -25,23 +38,10 @@ jobs:
       DB_MASTER_PASSWORD: ${{ secrets.DB_MASTER_PASSWORD }}
       DB_SCHEMA: ${{ secrets.DB_SCHEMA }}
 
-  # 2. lint commit messages
-  #  lint-commit:
-  #    needs: [unit-tests]
-  #    name: Commit lint
-  #    uses: ./.github/workflows/commitlint.yml
-  #    if: success()
-
-  # 3. prettier check
-  prettier-check:
-    needs: [unit-tests]
-    name: Prettier check
-    uses: ./.github/workflows/prettier.yml
-    if: success()
 
   # 4. slack notification about PR is opened
   notify-slack:
-    needs: [unit-tests, prettier-check]
+    needs: [prettier-check, unit-tests]
     name: Notify Slack
     uses: ./.github/workflows/slack-notification-pr.yml
     with:
