--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,22 @@ permissions:
   issues: read
 
 jobs:
-  # 1. run unit test
+  # 1. lint commit messages
+  #    lint-commit:
+  #      needs: [unit-tests]
+  #      name: Commit lint
+  #      uses: ./.github/workflows/commitlint.yml
+  #      if: success()
+
+  # 2. prettier check
+  prettier-check:
+    name: Prettier check
+    uses: ./.github/workflows/prettier.yml
+    if: success()
+
+  # 3. run unit test
   unit-tests:
+    needs: [ prettier-check ]
     name: Unit tests
     uses: ./.github/workflows/unit-tests.yml
     secrets:
@@ -27,23 +41,9 @@ jobs:
       DB_MASTER_PASSWORD: ${{ secrets.DB_MASTER_PASSWORD }}
       DB_SCHEMA: ${{ secrets.DB_SCHEMA }}
 
-  # 2. lint commit messages
-  #    lint-commit:
-  #      needs: [unit-tests]
-  #      name: Commit lint
-  #      uses: ./.github/workflows/commitlint.yml
-  #      if: success()
-
-  # 3. prettier check
-  prettier-check:
-    needs: [ unit-tests ]
-    name: Prettier check
-    uses: ./.github/workflows/prettier.yml
-    if: success()
-
   # 4. security test and generate report
   security:
-    needs: [ unit-tests, prettier-check ]
+    needs: [ prettier-check, unit-tests ]
     name: Security check
     uses: ./.github/workflows/security.yml
     secrets:
@@ -52,7 +52,7 @@ jobs:
 
   # 5. dependencies generate report
   dependencies:
-    needs: [ unit-tests, prettier-check, security ]
+    needs: [ prettier-check, unit-tests, security ]
     name: Security check
     uses: ./.github/workflows/software-dependencies.yml
     secrets:
@@ -61,14 +61,14 @@ jobs:
 
   # 6. documentation generate reports
   documentation:
-    needs: [ unit-tests, prettier-check, security, dependencies ]
+    needs: [ prettier-check, unit-tests, security, dependencies ]
     name: Security check
     uses: ./.github/workflows/documentation.yml
     if: success()
 
-  #   7. release create
+  # 7. release create
   release:
-    needs: [ unit-tests, prettier-check, security, dependencies, documentation ]
+    needs: [ prettier-check, unit-tests, security, dependencies, documentation ]
     name: Release
     runs-on: ubuntu-latest
     env:
@@ -110,7 +110,7 @@ jobs:
 
   # 8. slack notification about created release
   notify-slack:
-    needs: [ unit-tests, prettier-check, security, dependencies, documentation, release ]
+    needs: [ prettier-check, unit-tests, security, dependencies, documentation, release ]
     name: Notify Slack
     uses: ./.github/workflows/slack-notification-rel.yml
     with:
