feat(SG-597): Localization of all APIs

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,11 @@ OAUTH_USER_URL=https://dev.auth.starlionrc.com/api/v1/oauth/user
 POLICY_SERVICE_URL=https://dev.api.starlionrc.com/policies-api
 
 API_DOCS_HOST_LIST=https://api.test.com/translate-api
+
+# Localization
+DEFAULT_LANGUAGE=en-US
+DEFAULT_AVAILABLE_LANGUAGES=en-US,zh-CN,pt-BR
+DEFAULT_TRANSLATION_CACHE_EXPIRATION=3600000
+DEFAULT_TRANSLATE_DIRECTORY_PATH=./src/i18n/locales
+TRANSLATE_API_URL=http://172.17.0.1:3302
+TRANSLATE_API_CLIENT_ID=1
