feat(SG-655): Update all APIs to support SDK 1.49.0 microservices

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ LOG_DB_REQUESTS=true
 LOG_HTTP_REQUEST_BODY=true
 LOG_HTTP_RESPONSES=true
 LOG_WRITER=ConsoleLogWriter
+MAX_WORKERS=1
 
 # Database config
 DB_HOST=localhost
@@ -21,6 +22,22 @@ DB_PASSWORD=user
 DB_SCHEMA=public
 DB_MIGRATION_TABLE_SCHEMA=public
 DB_MIGRATION_TABLE_NAME=sequelize_meta
+
+DB_POOL_MAX=5
+DB_POOL_MIN=0
+DB_POOL_ACQUIRE=10000
+DB_POOL_IDLE=10000
+DB_POOL_EVICT=10000
+DB_POOL_MAX_USES=0
+
+# Cashe service
+CACHE_TRANSPORT=MemoryCacheTransport
+REDIS_URL=
+REDIS_PASSWORD=
+REDIS_USERNAME=
+REDIS_DB=
+REDIS_TLS=
+REDIS_KEY_PREFIX=translate_api:
 
 # EventBus
 EVENTBUS_PROVIDER=TestEventbusProvider
